--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 }
 
 :root {
-  --main-bg-color: blue;
-  --sand-tan: #e1b382;
-  --night-blue: #2d545e;
+  --main-bg-color: rgb(255, 255, 255);
+  --black: #030303;
+  --red: #e12e02;
 }
 
 body {
