fixed /bookings bug

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,4 +1,9 @@
  /* Leah is working here ===== */
 h1 {
-    text-align: cneter;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+p {
+
 }
