added some css to dashboard and index

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,18 @@
 :root {
   --main-bg-color: rgb(255, 255, 255);
   --black: #030303;
-  --red: #e12e02;
+  --green: #1EC337;
 }
 
 body {
-  background-color: white;
+  background-color: blue;
   /* Use a system font; if none are available, use an available sans-serif font */
   font-family: system-ui, sans-serif;
   /* Ensures full height compatibility across devices */
   min-height: 100dvh;
   margin: 0;
+}
+
+button {
+  
 }
