fixed duplicate bug

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: blue;
+  background-color: white;
   /* Use a system font; if none are available, use an available sans-serif font */
   font-family: system-ui, sans-serif;
   /* Ensures full height compatibility across devices */
