--- a/src/components/ReviewForm/ReviewForm.css
+++ b/src/components/ReviewForm/ReviewForm.css
@@ -1,23 +1,22 @@
 h1 {
   text-align: center;
 }
-.form {
+.review-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   border: solid black;
-  border-radius: 2cm;
+  border-radius: 1cm;
   padding: 50px;
-  margin-left: 30%;
-  margin-right: 30%;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+div {
+  padding: 10px;
 }
 
-.form div {
-  padding: 5px;
-}
-
-.form button {
-  padding: 5px;
-  border-radius: 0.5cm;
+.review-form button {
+  padding: 8px;
+  border-radius: 12px;
   cursor: pointer;
 }
