--- a/src/components/RentalList/RentalList.css
+++ b/src/components/RentalList/RentalList.css
@@ -1,9 +1,16 @@
 /*  if this is to be white- 
 we could just make the background white  */
-.rental-list {
+h1, h2 {
+  font-size:x-large;
+  text-decoration: underline;
+  text-align: left;
+  margin-left: 100px;
+}
+
+/* .rental-list {
   background-color: var(--main-bg-color);
   color: var(--black);
-}
+} */
 
 .rental-list ul {
   /* list-style: square; */
@@ -11,7 +18,7 @@ we could just make the background white  */
 }
 
 .rental-list li {
-  padding: 10px;
-  border: solid black;
-  border-radius: 5px;
+  padding: 20px;
+  /* border: solid black;
+  border-radius: 5px; */
 }
