started on rental list css

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 :root {
   --main-bg-color: rgb(255, 255, 255);
   --black: #030303;
-  --red: #e12e02;
+  --green: #1EC337;
 }
 
 body {
@@ -15,4 +15,9 @@ body {
   /* Ensures full height compatibility across devices */
   min-height: 100dvh;
   margin: 0;
+
+}
+
+button {
+  
 }
