--- a/src/components/RentalDetails/RentalDetails.css
+++ b/src/components/RentalDetails/RentalDetails.css
@@ -1,4 +1,4 @@
-h1 {
+.rental-section h1 {
   display: inline-block;
 }
 
@@ -10,6 +10,5 @@ img {
   margin-left: 45%;
 }
 
-.review-section article {
-  border: none;
-}
+/* .review-section article {
+} */
