Index.css updates and other css updates

--- a/src/components/BookingDetails/BookingDetails.css
+++ b/src/components/BookingDetails/BookingDetails.css
@@ -13,10 +13,10 @@ main {
 .review-header {
   margin-right: 83%;
 }
-.review button {
+/* .review button {
   padding: 7px 10px;
   border-radius: 7px;
-}
+} */
 
 .edit-button {
   margin-left: 82%;
