--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -1,6 +1,6 @@
-h1 {
+/* h1 {
   text-align: center;
-}
+} */
 .form {
   display: flex;
   flex-direction: column;
@@ -16,8 +16,8 @@ h1 {
   padding: 5px;
 }
 
-.form button {
+/* .form button {
   padding: 5px;
   border-radius: 0.5cm;
   cursor: pointer;
-}
+} */
