--- a/src/components/RentalList/RentalList.css
+++ b/src/components/RentalList/RentalList.css
@@ -1,6 +1,6 @@
 /*  if this is to be white- 
 we could just make the background white  */
-h1, h2 {
+ h2 {
   font-size:x-large;
   text-decoration: underline;
   text-align: left;
@@ -36,6 +36,6 @@ h1, h2 {
 
 .rental-list li {
   padding: 20px;
-  /* border: solid black;
-  border-radius: 5px; */
+  border: solid black;
+  border-radius: 5px;
 }
