--- a/src/components/RentalList/RentalList.css
+++ b/src/components/RentalList/RentalList.css
@@ -1,25 +1,39 @@
 /*  if this is to be white- 
 we could just make the background white  */
+
 h1, h2 {
+  color: rgb(254, 254, 0);
+  display: flex;
   font-size:x-large;
   text-decoration: underline;
-  text-align: left;
-  margin-left: 100px;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  background-color:#18922B;
 }
 
 .rental {
   display: flex;
   flex-direction: column;
   height: 265px;
+  width: 263px;
   font-size: x-large;
   text-decoration: none;
-  margin-left: 38px;
+  /* margin-left: 38px; */
   margin-bottom: 100px;
+  border: 4px solid black;
+  padding: 1px;
+}
+
+.rental-name {
+  color: black;
 }
 
 .rental-photo {
-  width: 250px;
-  height:230px;
+  width: 215px;
+  height:180px;
   margin-left: 0px;
   margin-top: 20px;
 }
