--- a/src/components/RentalList/RentalList.css
+++ b/src/components/RentalList/RentalList.css
@@ -1,10 +1,11 @@
 /*  if this is to be white- 
 we could just make the background white  */
- h2 {
-  font-size:x-large;
+h2 {
+  font-size: x-large;
   text-decoration: underline;
   text-align: left;
   margin-left: 100px;
+}
 
 .rental {
   display: flex;
@@ -16,7 +17,6 @@ we could just make the background white  */
   /* margin-left: 38px; */
   margin-bottom: 100px;
   border: 4px solid black;
-  padding: 1px;
 }
 
 .rental-name {
@@ -24,24 +24,28 @@ we could just make the background white  */
 }
 
 .rental-photo {
-  width: 215px;
-  height:180px;
+  width: 260px;
+  height: 220px;
   margin-left: 0px;
-  margin-top: 20px;
 }
 
-/* .rental-list {
-  background-color: var(--main-bg-color);
-  color: var(--black);
-} */
-
 .rental-list ul {
-  /* list-style: square; */
-  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
 }
 
 .rental-list li {
-  padding: 20px;
   border: solid black;
   border-radius: 5px;
+  list-style: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background: rgb(248, 155, 170);
+}
+
+.rental-list a {
+  text-align: center;
+  font-size: 100%;
 }
