--- a/src/components/ReviewForm/ReviewForm.css
+++ b/src/components/ReviewForm/ReviewForm.css
@@ -8,8 +8,12 @@
   border: solid black;
   border-radius: 1cm;
   padding: 50px;
+  /*
   margin-left: 20%;
-  margin-right: 20%;
+  margin-right: 20%; */
+  width: 12cm;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 div {
   padding: 10px;
@@ -18,5 +22,5 @@ div {
 /* .review-form button {
   /* padding: 8px;
   border-radius: 12px; */
-  /* cursor: pointer; */
-/* } */ 
+/* cursor: pointer; */
+/* } */
