--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,8 +1,6 @@
- /* Leah is working here ===== */
-/* h1 {
-    color: black;
-
-} */
+.dashboard-h2 h2 {
+    text-align: center;
+  }
 
 p {
     color: black;
