--- a/src/components/BookingDetails/BookingDetails.css
+++ b/src/components/BookingDetails/BookingDetails.css
@@ -1,6 +1,8 @@
 
 .booking-photo {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-left: 40%;
+  margin-top: 5%;
 
 }
 
